Quiz controller -> getQuizById endpoint - more short representation of quiz - only questions and options without answers